k8s/namespaces/base/home-system/home-assistant/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home-assistant
  namespace: home-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'hass.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 8123
            host: home-assistant.home-system.svc.cluster.local
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: home-assistant-code
  namespace: home-system
spec:
  hosts:
    - 'hass-code.${CLUSTER_DOMAIN}'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - route:
        - destination:
            port:
              number: 12321
            host: home-assistant-codeserver.home-system.svc.cluster.local
          weight: 100
